Add RootHealthController and update SecurityConfig to permit root health endpoint and wildcard CORS